--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       run: go build -v ./...
 
     - name: Run tests
-      run: go test -v -race -coverprofile=coverage.out ./...
+      run: go test -v -race -coverprofile=coverage.txt ./...
 
     - name: Run go vet
       run: go vet ./...
@@ -43,7 +43,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.25.x'
       uses: codecov/codecov-action@v5
       with:
-        files: ./coverage.out
+        files: ./coverage.txt
         flags: unittests
         name: codecov-umbrella
 
