--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,13 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: Run tests
+    - name: Run tests (Unix)
+      if: runner.os != 'Windows'
       run: go test -v -race -coverprofile=coverage.txt ./...
+
+    - name: Run tests (Windows)
+      if: runner.os == 'Windows'
+      run: go test -v ./...
 
     - name: Run go vet
       run: go vet ./...
@@ -61,9 +66,9 @@ jobs:
         go-version: '1.25.x'
 
     - name: golangci-lint
-      uses: golangci/golangci-lint-action@v6
+      uses: golangci/golangci-lint-action@v9
       with:
-        version: v2.9.0
+        version: latest
         args: --timeout=5m
 
   build:
